# studyexperiment

./: .gitignore  Baseline_and_comparative_trials.html  Baseline_and_comparative_trials.json  RAMP_SUMO_PLAN.md  README.md  build_forum.py  cursor多agent协作模板.md  experimental_reconstruction.html  experimental_reconstruction.json  pyproject.toml  task_forum.json  test_state_collector.py
.cursor/agents/: gemini-reviewer.md  gpt-reviewer.md
.cursor/plans/: ramp场景评审整改_21370388.plan.md  完善合流场景设计文档_25499eae.plan.md  新场景建网与迁移_5e2ba45e.plan.md  新场景建网阶段a_1373edfe.plan.md  阶段b_runtime适配_825eb5fc.plan.md
.cursor/rules/: multi-agent-collaboration.mdc
Algorithm_python/: README.md
Algorithm_python/docs/: active_gap_literature_alignment_and_optimization.md  active_gap_minimal_control_design.md  active_gap_rewrite_mapping.md  active_gap_ssot_rewrite_blueprint.md  contracts.md  derivations.md  design.md  formulas.md
Algorithm_python/forum/: boci1_daimagoujian.html  boci1_daimagoujian.json  cursor_gap_adjustment_algorithm_discuss.md  feature_task.html  feature_task.json  t8_micro_scenarios_exec.html  t8_micro_scenarios_exec.json  t8_micro_scenarios_impl.html  xiangmu_qianyi.html  xiangmu_qianyi.json
CSDF/: README.md  batch_run.py  config.py  main.py  test_traffic.py
CSDF/core/: DataTypes.py
CSDF/scene_4/: carlavtypes.rou.xml  road.net.xml  scene4.rou.xml  scene4.sumocfg
CSDF/sumo_data/: collisions_20260217-154610.csv  vehicle_trace_20260217-154522.csv  vehicle_trace_20260217-154610.csv
CSDF/sumo_integration/: constants.py
Scene/scene1/: replay_accident.py  run_synchronization.py  scene1.py
Scene/scene10/: README.md  Scene10_sumo v2.py  collect_accident_data.py  config.py  replay_accident.py
Scene/scene10(Sumo)/: README.md  Scene10_sumo v2.py  collect_accident_data.py  replay_accident.py
Scene/scene13/: collect_accident_data.py  config.py  replay_accident.py  run_synchronization.py  scene13.py  sumo13cv2.py
Scene/scene2/: collect_accident_data.py  replay_accident.py
Scene/scene3/: collect_accident_data.py  replay_accident.py
Scene/scene4/: replay_accident.py  scene4_brake.py
Scene/scene5/: collect_accident_data.py  replay_accident.py
Scene/scene8/: collect_accident_data.py  replay_accident.py  run_synchronization.py
cursor-multi-agent/: PROMPT_开场模板.txt  README.md  install.sh  task_forum.json
docs/: CSDF.md  OVERVIEW_SUMO.md  PLAN_RAMP_STAGE1.md  PLAN_RAMP_STAGE2.md  RAMP_REFACTOR_BLUEPRINT.md  RAMP_VALIDATION.md  RUNBOOK_SUMO.md  SCENARIO_RAMP_PAPER0_MLANE_V1_SPEC.md  STRONGA_算法交付验收文档.md  WORKLOG_2026-02-17.md  WORKLOG_2026-02-17_CSDF_ENV.md
mutil_vehicle/: CoordinateTransform.py  README.md  Scene4_main_mv.py  Solver_multi.py  Solver_multi_csv.py  offline_planner.py  offline_planner_left.py  planned_trajectories_lc_offline.csv  planned_trajectories_multi_vehicle.csv  replay.py  test_multi_vehicle.py  trajectory_executor.py  trajectory_plannner_multi.py  utils.py
mutil_vehicle/scene_4/: filename.out.xml  scene4.rou.xml  scene4.sumocfg  sumo.rou1.xml
ramp/: __init__.py
ramp/common/: vehicle_defs.py
(+277 files in other folders)
