[project]
name = 'swarmplanner'
classifiers = ['Private :: Do Not Upload']
version = "0.3.0"
description = '自主式交通系统预警与轨迹规划'
readme = 'README.md'
requires-python = '~=3.12.0'
dependencies = [
    "arcade>=3.0",
    "bidict>=0.23.1",
    "carla==0.9.15",
    "casadi>=3.7.1",
    "einops>=0.8.1",
    "google-generativeai>=0.8.4",
    "imageio[ffmpeg]>=2.37.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "loguru>=0.7.3",
    "lxml>=5.4.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "orjson>=3.10.16",
    "pandas>=2.3.1",
    "pillow>=11.0.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "rustworkx>=0.16.0",
    "scikit-image>=0.25.2",
    "scipy>=1.15.3",
    "setuptools>=78.1.0",
    "sumolib>=1.22.0",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "traci>=1.22.0",
    "typer>=0.15.2",
    "types-lxml>=2025.3.30",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=8.35.0",
    "pandas>=2.3.1",
    "pytest>=8.3.5",
    "ruff>=0.11.3",
    "viztracer>=1.0.4",
]

[project.scripts]
app = 'main:app'
forewarn = 'forewarn:cli.app'
fwviz = 'forewarn.visualizer.cli:app'
navtra = 'navtra:main'

data_generator = 'tools:example_data_generator.main'

# simbridge
bspawn = 'simbridge:spawn_actor.main'
bnetc = 'simbridge:netconvert.main'

# trafion
tplay = 'tools:sumo_player.app'
travis = 'tools:travis.main'

# sumo_track
trgen = 'tools:sumo_traffic_generator.app'

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.build.targets.wheel]
packages = ['src/forewarn', 'src/navtra']

[tool.hatch.metadata]
allow-direct-references = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
carla = { path = "assets/carla-0.10.0-cp312-cp312-win_amd64.whl" }

[tool.ruff]
src = ['src']
line-length = 100
exclude = ['.venv', 'typings', 'build']

[tool.ruff.lint]
select = ['E', 'F', 'W', 'A', 'PLC', 'PLE', 'PLW', 'I']
extend-select = ["UP035"]
ignore = ['PLC0415']

[tool.ruff.lint.per-file-ignores]
'__init__.py' = ['E402']
'**/{tests,docs,tools}/*' = ['E402']

[tool.ruff.format]
quote-style = 'single'

[tool.basedpyright]
include = ['src']
exclude = [
    '**/node_modules',
    '**/__pycache__',
    'src/experimental',
    'src/typestubs',
]
ignore = ['.venv/', 'typings/']
defineConstant = { DEBUG = true }
stubPath = 'typings/'

reportUnknownMemberType = false
reportUnknownLambdaType = false
reportUnusedCallResult = false
reportPrivateImportUsage = false
reportMissingTypeStubs = false
reportAny = false
reportExplicitAny = false

pythonVersion = '3.12'
pythonPlatform = 'Windows'
